repos/emily-python/contents/test/reader/fail/ambiguousIndent.em
# Ought to fail: I am not sure what happens after "c"
# Arg: --ast
# Expect failure

a b (c
	d
	e)
f